@@ -829,8 +829,9 @@ public class FSDirectory implements Closeable {
     // original location because a quota violation would cause the the item
     // to go "poof".  The fs limits must be bypassed for the same reason.
     if (checkQuota) {
-      final String parentPath = existing.getPath(pos - 1);
-      verifyFsLimits(inode.getLocalNameBytes(), parentPath, parent);
+      final String parentPath = existing.getPath();
+      verifyMaxComponentLength(inode.getLocalNameBytes(), parentPath);
+      verifyMaxDirItems(parent, parentPath);
     }
 
     updateCount(existing, pos, counts, checkQuota);
